Added header image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <header>
+	<img src="images/alpsup.jpg">
 	<h1>{{ site.tagline }}</h1>
 	<h2>{{ site.description }}</h2>
 </header>
