--- a/index.fr.html
+++ b/index.fr.html
@@ -4,8 +4,9 @@ title: Français
 ---
 
 <header>
-	<h1>L'École de données Suisse veut promouvoir l'utilisation et la compréhension des données.</h1>
-	<h2>Nous vous assistons sur notre forum en ligne et organisons des ateliers axés sur vos projets.</h2>
+	<h1>L'École de données promouvoit l'utilisation et la compréhension des données en Suisse.</h1>
+	<h2>Nous assistons sur <a href="https://forum.schoolofdata.ch">notre forum</a> 
+		et organisons les ateliers axés sur vos projets.</h2>
 </header>
 
 <section class="tiles">
