Added language tags, footer partners

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Deutsch
 ---
 
 <header>
-	<h1>{{ site.tagline }}</h1>
-	<h2>{{ site.description }}</h2>
+	<h1>{{ site.de.tagline }}</h1>
+	<h2>{{ site.de.description }}</h2>
 </header>
 
 <section class="tiles">
