--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ ref: index
 
 <section class="contact">
 	<h2>{{ site.de.signup.title }}</h2>
-	<form method="post" action="//synopses.us4.list-manage.com/subscribe/post?u=7d905c213d7f4aad6debd9f42&amp;id=3875ddf265">
+	<form method="post" action="http://utou.ch/scoda.php">
 		<div class="row uniform">
 			<div class="6u 12u$(small)">
 				{{ site.de.signup.header }}
