Fix language switcher

--- a/index.en.html
+++ b/index.en.html
@@ -1,8 +1,9 @@
 ---
-layout: default
-title: English
+title: School of Data Switzerland
+language: English
 lang: en
 ref: index
+layout: default
 ---
 
 <header>
