--- a/index.fr.html
+++ b/index.fr.html
@@ -1,8 +1,9 @@
 ---
-layout: default
-title: Français
+title: L'École de données Suisse
+language: Français
 lang: fr
 ref: index
+layout: default
 ---
 
 <header>
