--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
-layout: default
-title: Deutsch
+title: School of Data Schweiz
+language: Deutsch
 lang: de
 ref: index
+layout: default
 ---
 
 <header>
@@ -53,6 +54,7 @@ ref: index
 	</div>
 </section>
 
+<a name="contact"></a>
 <section class="contact">
 	<h2>{{ site.de.signup.title }}</h2>
 	<form method="post" action="http://utou.ch/scoda.php">
