--- a/index.fr.html
+++ b/index.fr.html
@@ -18,7 +18,7 @@ layout: default
 			<img src="{{ site.baseurl }}/{{ post.image }}" alt="" />
 		</span>
 		<a href="{{ post.url | prepend: site.baseurl }}">
-			<p>{{ post.date | date: "%b %-d, %Y" }}</p>
+			<p>{{ post.when | date: "%b %-d, %Y" }}</p>
 			<h2>{{ post.title }}</h2>
 			<div class="content">
 				<p>{{ post.tagline }}</p>
