Adjusted links and titles from feedback

--- a/index.en.html
+++ b/index.en.html
@@ -28,7 +28,7 @@ layout: default
 	{% endfor %}
 </section>
 
-<section>
+<section id="info">
 	<div class="row">
 		<div class="6u 12u$(medium)">
 			<div class="service-item">
@@ -54,8 +54,7 @@ layout: default
 	</div>
 </section>
 
-<a name="contact"></a>
-<section class="contact">
+<section class="contact" id="contact">
 	<h2>{{ site.en.signup.title }}</h2>
 	<form method="post" action="http://utou.ch/scoda.php">
 		<div class="row uniform">
