current projects title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ layout: default
 	<h2>{{ site.de.description }}</h2>
 </header>
 
-<hr> 
+<hr>
+<h2>{{ site.de.current.title }}</h2> 
 <section class="tiles">
 	{% for post in site.posts %}
 	<article class="{{ post.style }}">
