--- a/index.en.html
+++ b/index.en.html
@@ -8,10 +8,11 @@ layout: default
 
 <header>
 	<h1>{{ site.en.tagline }}</h1>
-	<h2>{{ site.en.description }}</h2>
+	<h5>{{ site.en.description }}</h5>
 </header>
 
 <hr> 
+<h2>{{ site.en.current.title }}</h2>
 <section class="tiles">
 	{% for post in site.posts %}
 	<article class="{{ post.style }}">
