--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 </header>
 
 <hr>
-<h2>{{ site.de.current.title }}</h2> 
+<h2>{{ site.de.current.title }}</h2>
 <section class="tiles">
 	{% for post in site.posts %}
 	<article class="{{ post.style }}">
@@ -29,7 +29,7 @@ layout: default
 	</article>
 	{% endfor %}
 </section>
-<hr> 
+<hr>
 
 <section id="info">
 	<div class="row">
@@ -92,8 +92,16 @@ layout: default
 				<textarea name="COMMENT" id="signup-message" placeholder="{{ site.de.signup.comment }}" rows="6"></textarea>
 			</div>
 			<div class="12u$">
+				{% include index-submit.include %}
 				<ul class="actions">
-					<li><input type="submit" value="{{ site.de.signup.send }}" class="special" /></li>
+					<li>
+						<button
+							class="g-recaptcha special"
+							data-sitekey="6Lco8A8UAAAAAH68UXg94Ib9ptw6fRGxnZtSb0oQ"
+							data-callback="window.contactFormSubmit">
+							{{ site.de.signup.send }}
+						</button>
+					</li>
 				</ul>
 			</div>
 		</div>
