Error msg added

--- a/index.fr.html
+++ b/index.fr.html
@@ -59,7 +59,7 @@ layout: default
 
 <section class="contact" id="contact">
 	<h2>{{ site.fr.signup.title }}</h2>
-	<form method="post" action="http://utou.ch/scoda.php">
+	<form method="post" action="https://utou.ch/scoda.php">
 		<div class="row uniform">
 			<div class="6u 12u$(small)">
 				{{ site.fr.signup.header }}
