--- a/index.fr.html
+++ b/index.fr.html
@@ -83,24 +83,19 @@ layout: default
 				<input style="display:none" type="text" name="ORG" id="signup-org" value="" placeholder="{{ site.fr.signup.org }}" />
 			</div>
 			<div class="6u 12u$(xsmall)">
-				<input type="text" name="NAME" id="signup-name" value="" placeholder="{{ site.fr.signup.name }}" />
+				<input type="text" name="NAME" id="signup-name" value="" placeholder="{{ site.fr.signup.name }}" required />
 			</div>
 			<div class="6u$ 12u$(xsmall)">
-				<input type="email" name="EMAIL" id="signup-email" value="" placeholder="{{ site.fr.signup.email }}" />
+				<input type="email" name="EMAIL" id="signup-email" value="" placeholder="{{ site.fr.signup.email }}" required />
 			</div>
 			<div class="12u$">
-				<textarea name="COMMENT" id="signup-message" placeholder="{{ site.fr.signup.comment }}" rows="6"></textarea>
+				<textarea name="COMMENT" id="signup-message" placeholder="{{ site.fr.signup.comment }}" rows="6" required></textarea>
 			</div>
 			<div class="12u$">
+				<div class="g-recaptcha" data-sitekey="{{ site.grecaptcha.key }}"></div>
+				<input type="hidden" name="lang" value=".fr" />
 				<ul class="actions">
-					<li>
-						<button
-							class="g-recaptcha special"
-							data-sitekey="6Lco8A8UAAAAAH68UXg94Ib9ptw6fRGxnZtSb0oQ"
-							data-callback="window.contactFormSubmit">
-							{{ site.fr.signup.send }}
-						</button>
-					</li>
+					<li><input type="submit" value="{{ site.fr.signup.send }}" class="special" /></li>
 				</ul>
 			</div>
 		</div>
