--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@ layout: default
 	</article>
 	{% endif %}{% endfor %}
 </section>
+
+<section id="twitter">
+	<div class="row">
+		<div class="6u 12u$(medium)">
+			<div id='discourse-comments'></div>
+			<script type="text/javascript">
+			DiscourseEmbed = { discourseUrl: 'http://forum.schoolofdata.ch/',
+			discourseEmbedUrl: 'https://schoolofdata-ch.github.io' };
+			(function() {
+				var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+				d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+				(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+			})();
+			</script>
+		</div>
+		<div class="6u 12u$(medium)">
+			<a class="twitter-timeline" data-lang="en" data-height="360" data-dnt="true" href="https://twitter.com/schoolofdata_ch/lists/network">A Twitter List by schoolofdata_ch</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</div>
+	</div>
+</section>
 <hr>
 
 <section id="info">
