--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ layout: default
 			{% endif %}
 		</span>
 		<a href="{{ post.url | prepend: site.baseurl }}">
-			<p>{{ post.when | date: "%b %-d, %Y" }}</p>
+			<!-- <p>{{ post.when | date: "%b %-d, %Y" }}</p> -->
 			<h2>{{ post.title }}</h2>
 			<div class="content">
 				<p>{{ post.tagline }}</p>
