--- a/index.en.html
+++ b/index.en.html
@@ -46,6 +46,16 @@ layout: default
 </section>
 
 <hr>
+<section id="calendar">
+	<h2>{{ site.en.current.calendar }}</h2>
+	<div class="row">
+		<div class="6u 12u$(medium)">
+   			{% include calendar.html %}
+   		</div>
+   	</div>
+</section>
+
+<hr>
 <section id="info">
 	<div class="row">
 		<div class="6u 12u$(medium)">
