--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@ layout: default
 </header>
 
 <hr>
+<h2>{{ site.de.current.calendar }}</h2>
+<section id="upcoming">
+ 	{% include calendar.html %}
+</section>
+
+<hr>
 <h2>{{ site.de.current.title }}</h2>
 <section id="frontpage" class="tiles">
 {% for post in site.posts %}{% if post.frontpage %}
@@ -43,16 +49,6 @@ layout: default
 			</div>
 		</a>
 	</article>
-</section>
-
-<hr>
-<section id="calendar">
-	<h2>{{ site.de.current.calendar }}</h2>
-	<div class="row">
-		<div class="6u 12u$(medium)">
-   			{% include calendar.html %}
-   		</div>
-   	</div>
 </section>
 
 <hr>
